--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ body {
 
 nav .nav-wrapper {
     padding: 80px;
-    background-color: #039be5;
+    background-color: #0a5d86;
     z-index: 1;
 }
 
@@ -38,7 +38,7 @@ div.menu ul li a
 {
     
     text-decoration: none;
-    font-size: 20pt;
+    font-size: 1.8vw;
     position: relative;
     z-index: 0;
     cursor: pointer;
@@ -112,7 +112,7 @@ div.borderXwidth ul li a:hover:before, div.borderXwidth ul li a:hover:after
 {
     font-family: 'Anton', sans-serif;
     line-height: 1;
-
+    
     letter-spacing: -.07em;
 
     color: #fff;
@@ -121,7 +121,7 @@ div.borderXwidth ul li a:hover:before, div.borderXwidth ul li a:hover:after
 .ks
 {
     font-family: 'Anton', sans-serif;
-    font-size: 55px;
+    font-size: 5.6vw;
     line-height: 1;
 
     margin-top: -11px;
@@ -145,7 +145,7 @@ div.borderXwidth ul li a:hover:before, div.borderXwidth ul li a:hover:after
             transform: translateX(0);
 }
 
-span
+.test span
 {
     font-family: 'Anton', Helvetica, sans-serif;
     font-size: 50px;
@@ -181,7 +181,7 @@ span
 
 .animate .un
 {
-    font-size: 40px;
+    font-size: 4vw;
 
     -webkit-transform: scale(1.5,1.5);
         -ms-transform: scale(1.5,1.5);
@@ -195,7 +195,7 @@ span
 
 .animate .break
 {
-    font-size: 60px;
+    font-size: 6vw;
 
     -webkit-transform: scale(1.5,1.5);
         -ms-transform: scale(1.5,1.5);
@@ -208,7 +208,7 @@ span
 
 .animate .able
 {
-    font-size: 80px;
+    font-size: 8vw;
 
     -webkit-transform: scale(1.5,1.5);
         -ms-transform: scale(1.5,1.5);
@@ -272,17 +272,19 @@ span
 }
 
 .effet {
-transition-duration: 0.8s;
-transition-timing-function: ease-in-out;
+/*transition-duration: 0.8s;
+transition-timing-function: ease-in-out;*/
+  overflow:hidden;/*On empeche l'image de dépasser du bloc*/
+  display:block;
 }
 
-.effet:hover
-{
+.img-news{transition:0.5s;} /* durée de l'animation en secondes*/
+.img-news:hover{transform : scale(1.2);} /* Zoom de l'image. La taille normale est 1 */
+
+/*.effet:hover {
 transition: 0.8s;
 transform: rotate(3deg);
-
-
-}
+}*/
 
 
 
@@ -312,8 +314,20 @@ transform: rotate(3deg);
 
 
 .page-footer {
-    background-color: #039be5;
+    background-color: #0a5d86;
 }
+
+
+
+        /*PAGE STAT*/
+
+.plan {
+    position: relative;
+    z-index: 1000;
+
+}
+
+
 
 
 
