--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,9 +326,163 @@ transform: rotate(3deg);
     background-color: #0a5d86;
 }
 
+        /*FORMULAIRE MATCH*/
+.bigForm{
+  display: flex;
+  background-color: gray;
+  color: white;
+  margin-top: 20px;
+}
+
+.bigForm span {
+  color:white;
+}
 
 
-        /*PAGE ACTU*/
+        /*PAGE DRAG*/
+
+
+        .drag {
+          background-image:url("../img/terrainGrand.jpeg");
+          height: 500px;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          margin-top: 30px;
+      }
+        #draggable1 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable2 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable3 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable4 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable5 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable6 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable8 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable7 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable9 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+        #draggable10 { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0;background-color: #0a5d86;border-radius: 2em;}
+        #draggable11{ width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: #0a5d86;border-radius: 2em;}
+
+        .drag p {
+          color:orange;
+          font-weight: bold;
+          font-size: 1em;
+          text-align: center;
+
+        }
+
+        /*lotoCompo*/
+
+    .lotoComp{
+      margin-top: 15px;
+    }
+
+        @font-face {
+    font-family: loto;
+    src: url(loto.ttf);
+}
+
+html,body,content,h1{
+  margin:0;
+  padding:0;
+}
+content{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1{
+  font-family: loto;
+  font-size: 5em;
+}
+h1 .rouge{
+  color:rgb(171,35,13);
+}
+h1 .bleu{
+  color:rgb(45,32,120);
+}
+h2{
+  font-family: loto;
+  font-size: 1em;
+  color:rgb(171,35,13);
+}
+section{
+  display:flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width:100%;
+  margin-bottom: 5%;
+}
+.tirage{
+  width:150px;
+  height:150px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  o
+}
+
+.balle {
+  height:100%;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50%;
+  margin: 0;
+  background: radial-gradient(circle at 5% 25%, rgb(214,45,17), #000);
+}
+
+.balle .numero{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(215,215,215);
+  border-radius: 50%;
+  height: 45%;
+  width: 45%;
+  color: rgb(65,65,65);
+  font-family: Helvetica;
+  font-size:1.5em;
+}
+
+.souligne{
+  background-color:rgb(214,45,17);
+  height:3%;
+  width:20%;
+  margin-left: 50%;
+  margin-right:50%;
+}
+
+#sectionChance .balle{
+  background: radial-gradient(circle at 5% 25%, rgb(255,195,0), #000);
+}
+
+.ombre {
+  width: 65%;
+  height: 3%;
+  border-radius: 50%;
+  background: radial-gradient(circle at 50% 50%, black, white);
+  margin-top:-1%;
+  z-index: -1;
+}
+
+@keyframes deplacement{
+  from{
+    transform:translateX(var(--deplacement));
+  }
+  to{
+    transform:translateX(0px);
+  }
+}
+
+@keyframes tours{
+  0% {transform: rotate(var(--degreDebut));}
+  100% {transform: rotate(var(--degreFin));}
+}
 
 .resize {
     width: 250px;
