--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,7 +246,9 @@ div.borderXwidth ul li a:hover:before, div.borderXwidth ul li a:hover:after
     font-family: 'Montserrat Subrayada', sans-serif;
     font-size: 30px;
     color: white;
-    background-color: black;
+    background-color: #0a5d86;
+    border-radius: 3px;
+    width: 100%;
 
 }
 
