--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,28 +383,33 @@ transform: rotate(3deg);
     src: url(loto.ttf);
 }
 
-html,body,content,h1{
+/*html,body,content,h1{
   margin:0;
   padding:0;
-}
+}*/
 content{
   display:flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
-h1{
+/*h1{
   font-family: loto;
   font-size: 5em;
-}
-h1 .rouge{
+}*/
+.rouge{
   color:rgb(171,35,13);
-}
-h1 .bleu{
-  color:rgb(45,32,120);
-}
-h2{
   font-family: loto;
-  font-size: 1em;
+  font-size: 4em;
+}
+.bleu{
+  color:rgb(45,32,120);
+  font-family: loto;
+  font-size: 4em;
+}
+.gardien{
+  font-family: loto;
+  font-size: 1.5em;
   color:rgb(171,35,13);
 }
 section{
