--- a/public/css/style.css
+++ b/public/css/style.css
@@ -649,3 +649,42 @@ a.story-link{
 a.story-link:hover {
   color: #50413c;
 }
+
+
+  /*PAGE GALERIE*/
+
+
+.bloc-masonry {
+  width: 60%;
+  margin: 0 auto;
+  background: #131212;
+}
+
+
+div#masonry { 
+  display: flex; 
+  flex-direction: column; 
+  flex-wrap: wrap;
+  height: 100vw;
+  max-height: 800px;
+  font-size: 0;  
+}
+div#masonry img {  
+  width: 33.3%;
+  transition: .8s opacity;
+} 
+
+div#masonry:hover img { opacity: 0.3; }
+div#masonry:hover img:hover { opacity: 1; } 
+
+/* fallback for earlier versions of Firefox */
+
+@supports not (flex-wrap: wrap) {
+  div#masonry { display: block; }
+  div#masonry img {  
+  display: inline-block;
+  vertical-align: top;
+  }
+}
+
+ 
